Обновление main.go под добавление пользователя
